aggiunto pieno supporto a file di grandi dimensioni, rimane da usare il più possibile putLong